tests/ui/rust-2024/unsafe-attributes/unsafe-attributes-from-pm.edition2024.stderr
error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-from-pm.rs:13:1
   |
LL | unsafe_attributes_pm::macro_rules_missing_unsafe!();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ usage of unsafe attribute
...
LL | make_fn!();
   | ---------- in this macro invocation
   |
   = note: this error originates in the macro `make_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
help: wrap the attribute in `unsafe(...)`
   |
LL | ununsafe(safe_attributes_pm::macro_rules_missing_unsafe!());
   |   +++++++                                                +

error: aborting due to 1 previous error

