tests/ui/rust-2024/unsafe-attributes/unsafe-attributes-from-pm.rs
// Test for unsafe attributes generated by a proc-macro.
// See https://github.com/rust-lang/rust/issues/132906

//@ revisions: edition2021 edition2024
//@ check-pass
//@[edition2021] edition:2021
//@[edition2024] edition:2024
//@ proc-macro: unsafe-attributes-pm.rs
//@ ignore-backends: gcc

unsafe_attributes_pm::missing_unsafe!();

unsafe_attributes_pm::macro_rules_missing_unsafe!();

make_fn!();

fn main() {}
